Fix #10 use SVG foreignObject to hack word wrap

--- a/css/tree.css
+++ b/css/tree.css
@@ -9,6 +9,12 @@
   font-size: 11px;
 }
 
+.label {
+  font-size: 11px;
+  text-align: center;
+  word-wrap: normal;
+}
+
 path.link {
   fill: none;
   stroke: #ccc;
